--- a/src/styles/components/editor.scss
+++ b/src/styles/components/editor.scss
@@ -1,30 +1,25 @@
-html,
-body,
-div,
-span,
-h1,
-h2,
-h3,
-p {
-	padding: 0;
-	margin: 0;
-	font-family: sans-serif;
-}
-
-.Edit-page {
+.edit-page {
 	padding-top:10px;
 	padding-left: 80px;
 	padding-bottom: 10px;
 	padding-right: 10px;
 }
-.date-field {
+
+.entry-date {
 	width: 200px;
 	height: 30px;
 	padding: 5px;
 	font-weight: bold;
 	margin-top: 20px;
-
+  border: none;
+  font-size: 18px;
+  outline: none;
 }
+
+.preview-button {
+    float: right;
+}
+
 .text-field {
 	width: 90%;
 	height: 390px;
