--- a/src/endpoint/static/app.css
+++ b/src/endpoint/static/app.css
@@ -1,3 +1,26 @@
+@charset "UTF-8";
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: local("\263A"), url(/static/ecce92d0b0ff17197f29e7db6397bf0a.woff) format("woff"), url(/static/9ff15bd34ea83e4dd3f23c20c7f5090e.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local("\263A"), url(/static/16e1d930cf13fb7a956372044b6d02d0.woff) format("woff"), url(/static/07f8fb6acbabeb10d3fad9ab02d65e0b.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  src: local("\263A"), url(/static/57af64fc644194101c1593abea164433.woff) format("woff"), url(/static/a937e2cae14e68262a45aa91204c2fdf.ttf) format("truetype");
+}
+
 html,
 body,
 div,
@@ -17,24 +40,47 @@ p {
   color: red;
 }.editor__edit-page___27nWr {
   padding-top: 10px;
-  padding-left: 80px;
+  padding-left: 120px;
   padding-bottom: 10px;
   padding-right: 10px;
 }
 
 .editor__entry-date___1Gecm {
+  padding: 50px 0;
+}
+
+.editor__entry-date___1Gecm > div {
+  display: inline-block;
+}
+
+.editor__visible-date___1WdM8 {
   width: 200px;
+  padding-right: 10px;
   height: 30px;
-  padding: 5px;
   font-weight: bold;
   margin-top: 20px;
   border: none;
-  font-size: 18px;
+  font-size: 22px;
   outline: none;
+  font-family: 'Roboto';
+  vertical-align: text-bottom;
 }
 
-.editor__preview-button___3klVA {
-  float: right;
+.editor__edit-date___2tzWM {
+  background: url('data:image/svg+xml;utf8,<svg fill="#222" width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M491 1536l91-91-235-235-91 91v107h128v128h107zm523-928q0-22-22-22-10 0-17 7l-542 542q-7 7-7 17 0 22 22 22 10 0 17-7l542-542q7-7 7-17zm-54-192l416 416-832 832h-416v-416zm683 96q0 53-37 90l-166 166-416-416 166-165q36-38 90-38 53 0 91 38l235 234q37 39 37 91z"/></svg>') no-repeat;
+  background-size: contain;
+  width: 17px;
+  height: 17px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  color: transparent;
+  vertical-align: super;
+}
+
+.editor__edit-date___2tzWM:hover {
+  background: url('data:image/svg+xml;utf8,<svg fill="#444" width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M491 1536l91-91-235-235-91 91v107h128v128h107zm523-928q0-22-22-22-10 0-17 7l-542 542q-7 7-7 17 0 22 22 22 10 0 17-7l542-542q7-7 7-17zm-54-192l416 416-832 832h-416v-416zm683 96q0 53-37 90l-166 166-416-416 166-165q36-38 90-38 53 0 91 38l235 234q37 39 37 91z"/></svg>') no-repeat;
+  background-size: contain;
 }
 
 .editor__text-field___RjZyI {
@@ -42,6 +88,363 @@ p {
   height: 390px;
   margin-top: 10px;
   padding: 10px;
+}.tether-element-attached-top .datepicker__triangle,
+.tether-element-attached-bottom .datepicker__triangle,
+.datepicker__year-read-view--down-arrow {
+  margin-left: -8px;
+  position: absolute;
+}
+
+.tether-element-attached-top .datepicker__triangle,
+.tether-element-attached-bottom .datepicker__triangle,
+.datepicker__year-read-view--down-arrow,
+.tether-element-attached-top .datepicker__triangle::before,
+.tether-element-attached-bottom .datepicker__triangle::before,
+.datepicker__year-read-view--down-arrow::before {
+  box-sizing: content-box;
+  position: absolute;
+  border: 8px solid transparent;
+  height: 0;
+  width: 1px;
+}
+
+.tether-element-attached-top .datepicker__triangle::before,
+.tether-element-attached-bottom .datepicker__triangle::before,
+.datepicker__year-read-view--down-arrow::before {
+  content: "";
+  z-index: -1;
+  border-width: 8px;
+  left: -8px;
+  border-bottom-color: #aeaeae;
+}
+
+.tether-element-attached-top .datepicker__triangle {
+  top: 0;
+  margin-top: -8px;
+}
+
+.tether-element-attached-top .datepicker__triangle,
+.tether-element-attached-top .datepicker__triangle::before {
+  border-top: none;
+  border-bottom-color: #f0f0f0;
+}
+
+.tether-element-attached-top .datepicker__triangle::before {
+  top: -1px;
+  border-bottom-color: #aeaeae;
+}
+
+.tether-element-attached-bottom .datepicker__triangle,
+.datepicker__year-read-view--down-arrow {
+  bottom: 0;
+  margin-bottom: -8px;
+}
+
+.tether-element-attached-bottom .datepicker__triangle,
+.datepicker__year-read-view--down-arrow,
+.tether-element-attached-bottom .datepicker__triangle::before,
+.datepicker__year-read-view--down-arrow::before {
+  border-bottom: none;
+  border-top-color: #fff;
+}
+
+.tether-element-attached-bottom .datepicker__triangle::before,
+.datepicker__year-read-view--down-arrow::before {
+  bottom: -1px;
+  border-top-color: #aeaeae;
+}
+
+.datepicker {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 11px;
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #aeaeae;
+  border-radius: 4px;
+  display: inline-block;
+  position: relative;
+}
+
+.datepicker__container {
+  position: absolute;
+  display: inline-block;
+  z-index: 2147483647;
+}
+
+.datepicker__triangle {
+  position: absolute;
+  left: 50px;
+}
+
+.tether-target-attached-top.datepicker__container {
+  margin-top: -20px;
+}
+
+.datepicker__header {
+  text-align: center;
+  background-color: #f0f0f0;
+  border-bottom: 1px solid #aeaeae;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  padding-top: 8px;
+  position: relative;
+}
+
+.datepicker__current-month {
+  margin-top: 0;
+  color: #000;
+  font-weight: bold;
+  font-size: 13px;
+}
+
+.datepicker__current-month--hasYearDropdown {
+  margin-bottom: 16px;
+}
+
+.datepicker__navigation {
+  line-height: 24px;
+  text-align: center;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  width: 0;
+  border: 6px solid transparent;
+}
+
+.datepicker__navigation--previous {
+  left: 10px;
+  border-right-color: #ccc;
+}
+
+.datepicker__navigation--previous:hover {
+  border-right-color: #b3b3b3;
+}
+
+.datepicker__navigation--next {
+  right: 10px;
+  border-left-color: #ccc;
+}
+
+.datepicker__navigation--next:hover {
+  border-left-color: #b3b3b3;
+}
+
+.datepicker__navigation--years {
+  position: relative;
+  top: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.datepicker__navigation--years-previous {
+  top: 4px;
+  border-top-color: #ccc;
+}
+
+.datepicker__navigation--years-previous:hover {
+  border-top-color: #b3b3b3;
+}
+
+.datepicker__navigation--years-upcoming {
+  top: -4px;
+  border-bottom-color: #ccc;
+}
+
+.datepicker__navigation--years-upcoming:hover {
+  border-bottom-color: #b3b3b3;
+}
+
+.datepicker__week-day {
+  color: #ccc;
+  display: inline-block;
+  width: 28px;
+  line-height: 24px;
+}
+
+.datepicker__month {
+  margin: 5px;
+  text-align: center;
+}
+
+.datepicker__day {
+  color: #000;
+  display: inline-block;
+  width: 24px;
+  line-height: 24px;
+  text-align: center;
+  margin: 2px;
+  cursor: pointer;
+}
+
+.datepicker__day:hover {
+  border-radius: 4px;
+  background-color: #f0f0f0;
+}
+
+.datepicker__day--today {
+  font-weight: bold;
+}
+
+.datepicker__day--selected,
+.datepicker__day--in-range {
+  border-radius: 4px;
+  background-color: #216ba5;
+  color: #fff;
+}
+
+.datepicker__day--selected:hover,
+.datepicker__day--in-range:hover {
+  background-color: #1d5d90;
+}
+
+.datepicker__day--disabled {
+  cursor: default;
+  color: #ccc;
+}
+
+.datepicker__day--disabled:hover {
+  background-color: transparent;
+}
+
+.datepicker__input-container {
+  position: relative;
+}
+
+.datepicker__input {
+  position: relative;
+  font-size: 13px;
+  border-radius: 4px;
+  box-shadow: inset 0 2px 2px #e9e9e9;
+  border: 1px solid #aeaeae;
+  line-height: 16px;
+  padding: 6px 10px 5px;
+}
+
+.datepicker__input:focus {
+  outline: none;
+  border-color: #aeaeae;
+  box-shadow: inset 0 2px 2px #e9e9e9, 0 0 10px 0 rgba(73, 107, 125, 0.3);
+}
+
+.datepicker__input:not(:valid) ~ .close-icon {
+  display: none;
+}
+
+.datepicker__year-read-view {
+  width: 50%;
+  left: 25%;
+  position: absolute;
+  bottom: 25px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.datepicker__year-read-view:hover {
+  cursor: pointer;
+}
+
+.datepicker__year-read-view:hover .datepicker__year-read-view--down-arrow {
+  border-top-color: #b3b3b3;
+}
+
+.datepicker__year-read-view--down-arrow {
+  border-top-color: #ccc;
+  margin-bottom: 3px;
+  left: 5px;
+  top: 9px;
+  position: relative;
+  border-width: 6px;
+}
+
+.datepicker__year-read-view--selected-year {
+  right: 6px;
+  position: relative;
+}
+
+.datepicker__year-dropdown {
+  background-color: #f0f0f0;
+  position: absolute;
+  width: 50%;
+  left: 25%;
+  top: 30px;
+  text-align: center;
+  border-radius: 4px;
+  border: 1px solid #aeaeae;
+}
+
+.datepicker__year-dropdown:hover {
+  cursor: pointer;
+}
+
+.datepicker__year-option {
+  line-height: 20px;
+  width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.datepicker__year-option:first-of-type {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.datepicker__year-option:last-of-type {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.datepicker__year-option:hover {
+  background-color: #ccc;
+}
+
+.datepicker__year-option:hover .datepicker__navigation--years-upcoming {
+  border-bottom-color: #b3b3b3;
+}
+
+.datepicker__year-option:hover .datepicker__navigation--years-previous {
+  border-top-color: #b3b3b3;
+}
+
+.datepicker__year-option--selected {
+  position: absolute;
+  left: 30px;
+}
+
+.close-icon {
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  display: inline-block;
+  height: 0;
+  outline: 0;
+  padding: 0;
+  vertical-align: middle;
+}
+
+.close-icon::after {
+  background-color: #216ba5;
+  border-radius: 50%;
+  bottom: 0;
+  box-sizing: border-box;
+  color: #fff;
+  content: "\D7";
+  cursor: pointer;
+  font-size: 12px;
+  height: 16px;
+  width: 16px;
+  line-height: 1;
+  margin: -8px auto 0;
+  padding: 2px;
+  position: absolute;
+  right: 7px;
+  text-align: center;
+  top: 50%;
 }.activity-bar__activity-bar___3O1kc {
   position: relative;
   width: 50px;
