--- a/src/styles/components/activity-bar.scss
+++ b/src/styles/components/activity-bar.scss
@@ -1,11 +1,7 @@
 @import '../_icons.scss';
+@import '../_colors.scss';
 
 $activity-bar-width: 50px;
-$color-primary: #0D9DE7;
-$color-activity-bar-bg: #222;
-$color-item: #aaa;
-$color-item-hover: #fff;
-$color-item-splitter: #3a3a3a;
 $item-height: 20;
 
 @function activity-top ($num) {
@@ -20,8 +16,11 @@ $item-height: 20;
     position: relative;
     width: $activity-bar-width;
     height: 100vh;
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAICAYAAAAx8TU7AAAAH0lEQVQIW2NkgIK5Jib1yWfONIK4jFQShBmDYiZ5ggC8RRAJZLvlpgAAAABJRU5ErkJggg==) repeat-y;
+    background-position: 42px;
     background-color: $color-activity-bar-bg;
     float: left;
+    box-shadow: 0px 0px 1px 0px $color-activity-bar-shadow;
 }
 
 .activity {
@@ -34,7 +33,7 @@ $item-height: 20;
         content: '';
         width: 100%;
         height: 1px;
-        background: $color-item-splitter;
+        background: $color-activity-bar-item-splitter;
         position: absolute;
         bottom: -10px;
         left: -15px;
@@ -50,10 +49,10 @@ $item-height: 20;
 .activity-active {
     &::after {
         content: '';
-        width: $activity-bar-width + 2px;
-        height: $item-height * 1.8 + px;
+        width: $activity-bar-width;
+        height: $item-height * 2 + px;
         background: rgba(13, 157, 231, 0.2);
-        border-bottom: 4px solid $color-primary;
+        border-right: 4px solid $color-primary;
         position: absolute;
     }
 }
@@ -64,8 +63,8 @@ $item-height: 20;
     width: auto;
     font-size: 12px;
     left: $activity-bar-width - 10;
-    background: $color-item-splitter;
-    color: $color-item-hover;
+    background: $color-activity-bar-item-splitter;
+    color: $color-activity-bar-item-hover;
     padding: 5px;
     border-radius: 3px;
     font-style: normal;
@@ -81,7 +80,7 @@ $item-height: 20;
         top: 2px;
         border-top: 10px solid transparent;
         border-bottom: 10px solid transparent;
-        border-right: 10px solid $color-item-splitter;
+        border-right: 10px solid $color-activity-bar-item-splitter;
     }
 }
 
@@ -91,7 +90,7 @@ $item-height: 20;
 }
 
 .new-entry {
-    @include icon-file-o($color-item, $color-item-hover);
+    @include icon-file-o($color-activity-bar-item, $color-activity-bar-item-hover);
 
     composes: activity;
 }
@@ -101,7 +100,7 @@ $item-height: 20;
 
 .all-entries {
     @include activity-position(1);
-    @include icon-list-ul($color-item, $color-item-hover);
+    @include icon-list-ul($color-activity-bar-item, $color-activity-bar-item-hover);
 
     composes: activity;
 }
