--- a/src/styles/containers/app.scss
+++ b/src/styles/containers/app.scss
@@ -30,7 +30,8 @@ p {
     margin: 0px auto;
     width: 80%;
     max-width: 980px;
-    height: 100vh;
+    padding-top: 40px;
+    height: 120vh;
 }
 
 .header {
