--- a/src/endpoint/static/app.css
+++ b/src/endpoint/static/app.css
@@ -123,18 +123,18 @@ p {
   margin-top: 10px;
   outline: none;
   overflow: auto;
-}.tether-element-attached-top .datepicker__triangle,
-.tether-element-attached-bottom .datepicker__triangle,
+}.datepicker__tether-element-attached-top .datepicker__triangle,
+.datepicker__tether-element-attached-bottom .datepicker__triangle,
 .datepicker__year-read-view--down-arrow {
   margin-left: -8px;
   position: absolute;
 }
 
-.tether-element-attached-top .datepicker__triangle,
-.tether-element-attached-bottom .datepicker__triangle,
+.datepicker__tether-element-attached-top .datepicker__triangle,
+.datepicker__tether-element-attached-bottom .datepicker__triangle,
 .datepicker__year-read-view--down-arrow,
-.tether-element-attached-top .datepicker__triangle::before,
-.tether-element-attached-bottom .datepicker__triangle::before,
+.datepicker__tether-element-attached-top .datepicker__triangle::before,
+.datepicker__tether-element-attached-bottom .datepicker__triangle::before,
 .datepicker__year-read-view--down-arrow::before {
   box-sizing: content-box;
   position: absolute;
@@ -143,8 +143,8 @@ p {
   width: 1px;
 }
 
-.tether-element-attached-top .datepicker__triangle::before,
-.tether-element-attached-bottom .datepicker__triangle::before,
+.datepicker__tether-element-attached-top .datepicker__triangle::before,
+.datepicker__tether-element-attached-bottom .datepicker__triangle::before,
 .datepicker__year-read-view--down-arrow::before {
   content: "";
   z-index: -1;
@@ -153,37 +153,37 @@ p {
   border-bottom-color: #aeaeae;
 }
 
-.tether-element-attached-top .datepicker__triangle {
+.datepicker__tether-element-attached-top .datepicker__triangle {
   top: 0;
   margin-top: -8px;
 }
 
-.tether-element-attached-top .datepicker__triangle,
-.tether-element-attached-top .datepicker__triangle::before {
+.datepicker__tether-element-attached-top .datepicker__triangle,
+.datepicker__tether-element-attached-top .datepicker__triangle::before {
   border-top: none;
   border-bottom-color: #f0f0f0;
 }
 
-.tether-element-attached-top .datepicker__triangle::before {
+.datepicker__tether-element-attached-top .datepicker__triangle::before {
   top: -1px;
   border-bottom-color: #aeaeae;
 }
 
-.tether-element-attached-bottom .datepicker__triangle,
+.datepicker__tether-element-attached-bottom .datepicker__triangle,
 .datepicker__year-read-view--down-arrow {
   bottom: 0;
   margin-bottom: -8px;
 }
 
-.tether-element-attached-bottom .datepicker__triangle,
+.datepicker__tether-element-attached-bottom .datepicker__triangle,
 .datepicker__year-read-view--down-arrow,
-.tether-element-attached-bottom .datepicker__triangle::before,
+.datepicker__tether-element-attached-bottom .datepicker__triangle::before,
 .datepicker__year-read-view--down-arrow::before {
   border-bottom: none;
   border-top-color: #fff;
 }
 
-.tether-element-attached-bottom .datepicker__triangle::before,
+.datepicker__tether-element-attached-bottom .datepicker__triangle::before,
 .datepicker__year-read-view--down-arrow::before {
   bottom: -1px;
   border-top-color: #aeaeae;
@@ -200,18 +200,12 @@ p {
   position: relative;
 }
 
-.datepicker__container {
-  position: absolute;
-  display: inline-block;
-  z-index: 2147483647;
-}
-
 .datepicker__triangle {
   position: absolute;
   left: 50px;
 }
 
-.tether-target-attached-top.datepicker__container {
+.datepicker__tether-element-attached-bottom.datepicker__tether-element {
   margin-top: -20px;
 }
 
