--- a/src/endpoint/static/app.css
+++ b/src/endpoint/static/app.css
@@ -97,7 +97,9 @@ p {
   background: transparent;
   height: 18px;
   outline: none;
-  border: none;
+  padding: 0 !important;
+  border: none !important;
+  box-shadow: none !important;
   cursor: pointer;
   color: transparent;
   vertical-align: super;
@@ -123,6 +125,7 @@ p {
   margin-top: 10px;
   outline: none;
   overflow: auto;
+  white-space: pre-line;
 }.datepicker__tether-element-attached-top .datepicker__triangle,
 .datepicker__tether-element-attached-bottom .datepicker__triangle,
 .datepicker__year-read-view--down-arrow {
@@ -474,6 +477,86 @@ p {
   right: 7px;
   text-align: center;
   top: 50%;
+}/* bla bla bla */
+
+.medium-toolbar-arrow-under:after {
+  border-color: #9d3434 transparent transparent transparent;
+  top: 50px;
+}
+
+.medium-toolbar-arrow-over:before {
+  border-color: transparent transparent #9d3434 transparent;
+  top: -8px;
+}
+
+.medium-editor-toolbar {
+  background-color: #9d3434;
+  background: linear-gradient(to bottom, #9d3434, rgba(157, 52, 52, 0.75));
+  border: 1px solid #000;
+  border-radius: 5px;
+  box-shadow: 0 0 3px #000;
+}
+
+.medium-editor-toolbar li button {
+  background-color: #9d3434;
+  background: linear-gradient(to bottom, #9d3434, rgba(157, 52, 52, 0.89));
+  border: 0;
+  border-right: 1px solid #000;
+  border-left: 1px solid #333;
+  border-left: 1px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+  color: #fff;
+  height: 50px;
+  min-width: 50px;
+  transition: background-color .2s ease-in;
+}
+
+.medium-editor-toolbar li button:hover {
+  background-color: #000;
+  color: yellow;
+}
+
+.medium-editor-toolbar li .medium-editor-button-first {
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+}
+
+.medium-editor-toolbar li .medium-editor-button-last {
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.medium-editor-toolbar li .medium-editor-button-active {
+  background-color: #000;
+  background: linear-gradient(to bottom, #9d3434, rgba(0, 0, 0, 0.89));
+  color: #fff;
+}
+
+.medium-editor-toolbar-form {
+  background: #9d3434;
+  border-radius: 5px;
+  color: #999;
+}
+
+.medium-editor-toolbar-form .medium-editor-toolbar-input {
+  background: #9d3434;
+  box-sizing: border-box;
+  color: #ccc;
+  height: 50px;
+}
+
+.medium-editor-toolbar-form a {
+  color: #fff;
+}
+
+.medium-editor-toolbar-anchor-preview {
+  background: #9d3434;
+  border-radius: 5px;
+  color: #fff;
+}
+
+.medium-editor-placeholder:after {
+  color: #b3b3b1;
 }@-webkit-keyframes medium-editor-image-loading {
   0% {
     -webkit-transform: scale(0);
@@ -761,88 +844,6 @@ p {
 
 .medium-editor-hidden {
   display: none;
-}.medium-toolbar-arrow-under:after {
-  border-color: #242424 transparent transparent transparent;
-  top: 50px;
-}
-
-.medium-toolbar-arrow-over:before {
-  border-color: transparent transparent #242424 transparent;
-  top: -8px;
-}
-
-.medium-editor-toolbar {
-  background-color: #242424;
-  background: -webkit-linear-gradient(top, #242424, rgba(36, 36, 36, 0.75));
-  background: linear-gradient(to bottom, #242424, rgba(36, 36, 36, 0.75));
-  border: 1px solid #000;
-  border-radius: 5px;
-  box-shadow: 0 0 3px #000;
-}
-
-.medium-editor-toolbar li button {
-  background-color: #242424;
-  background: -webkit-linear-gradient(top, #242424, rgba(36, 36, 36, 0.89));
-  background: linear-gradient(to bottom, #242424, rgba(36, 36, 36, 0.89));
-  border: 0;
-  border-right: 1px solid #000;
-  border-left: 1px solid #333;
-  border-left: 1px solid rgba(255, 255, 255, 0.1);
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
-  color: #fff;
-  height: 50px;
-  min-width: 50px;
-  -webkit-transition: background-color .2s ease-in;
-  transition: background-color .2s ease-in;
-}
-
-.medium-editor-toolbar li button:hover {
-  background-color: #000;
-  color: yellow;
-}
-
-.medium-editor-toolbar li .medium-editor-button-first {
-  border-bottom-left-radius: 5px;
-  border-top-left-radius: 5px;
-}
-
-.medium-editor-toolbar li .medium-editor-button-last {
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px;
-}
-
-.medium-editor-toolbar li .medium-editor-button-active {
-  background-color: #000;
-  background: -webkit-linear-gradient(top, #242424, rgba(0, 0, 0, 0.89));
-  background: linear-gradient(to bottom, #242424, rgba(0, 0, 0, 0.89));
-  color: #fff;
-}
-
-.medium-editor-toolbar-form {
-  background: #242424;
-  border-radius: 5px;
-  color: #999;
-}
-
-.medium-editor-toolbar-form .medium-editor-toolbar-input {
-  background: #242424;
-  box-sizing: border-box;
-  color: #ccc;
-  height: 50px;
-}
-
-.medium-editor-toolbar-form a {
-  color: #fff;
-}
-
-.medium-editor-toolbar-anchor-preview {
-  background: #242424;
-  border-radius: 5px;
-  color: #fff;
-}
-
-.medium-editor-placeholder:after {
-  color: #b3b3b1;
 }.activity-bar__activity-bar___3O1kc {
   position: fixed;
   width: 50px;
