--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -12,3 +12,6 @@ $color-editor-toolbar-button: $color-primary;
 $color-editor-toolbar-border: darken($color-editor-toolbar-bg, 40);
 $color-editor-toolbar-active-bg: lighten($color-primary, 40);
 $color-editor-toolbar-form: lighten($color-primary, 10);
+
+$color-archive-entry-bg: #fff;
+$color-archive-content: #311;
