Create Tag and TagList components
- Make view part of EditEntry view
- Finish Tag along with emitted actions

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -2,3 +2,6 @@ $color-main-sidebar-border: #000;
 
 $color-sidebar-icon-bg: #000;
 $color-sidebar-icon-bg-hover: #888;
+
+$color-tag-bg: #ddd;
+$color-tag-close-button: #000;
