--- a/src/scss/_icons.scss
+++ b/src/scss/_icons.scss
@@ -48,3 +48,11 @@
     position: absolute;
     bottom: 0;
 }
+
+@mixin icon-close($color, $color-hover: null) {
+    $icon-svg: '<svg enable-background="new 0 0 100 100" id="Layer_1" version="1.1" viewBox="0 0 100 100" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><polygon fill="#010101" points="77.6,21.1 49.6,49.2 21.5,21.1 19.6,23 47.6,51.1 19.6,79.2 21.5,81.1 49.6,53 77.6,81.1 79.6,79.2   51.5,51.1 79.6,23 "/></svg>';
+    @include icon($icon-svg, $color, $color-hover);
+
+    position: absolute;
+    bottom: 0;
+}
