Connect EditEntry and children with Observable
- Move to class based Component instead of functional components because
  when you need to leverage a child component's actions and you need
  access to props, functional components don't do very well.

Next steps:
- Make clicking on date open a calendar
- Create a higher order component for subscribing to child's actions and
  map them to component's own actions.

--- a/src/components/Tag/style.scss
+++ b/src/components/Tag/style.scss
@@ -17,6 +17,7 @@
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     background: $color-tag-bg;
+    color: $color-tag-body;
 
     &:after {
         position: absolute;
