--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -3,5 +3,9 @@ $color-main-sidebar-border: #000;
 $color-sidebar-icon-bg: #000;
 $color-sidebar-icon-bg-hover: #888;
 
-$color-tag-bg: #ddd;
-$color-tag-close-button: #000;
+$color-edit-entry-error: #000;
+$color-edit-entry-error-border: #000;
+
+$color-tag-bg: #000;
+$color-tag-body: #fff;
+$color-tag-close-button: #fff;
