Add entries to BrowseEntries view

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -9,3 +9,5 @@ $color-edit-entry-error-border: #000;
 $color-tag-bg: #000;
 $color-tag-body: #fff;
 $color-tag-close-button: #fff;
+
+$color-browse-entries-tags: #888;
